--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-moment": "^1.0.0",
     "react-scripts": "4.0.1",
