--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.3.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "modules": "^0.4.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
